test(BoardTest, ChessGameTest, ChessViewTest, PieceTest, PositionTest): Board 클래스 분리로 인한 Test 코드 분리 및 재작성